--- a/web/AssignmentsPage.html
+++ b/web/AssignmentsPage.html
@@ -4,6 +4,8 @@
 	<title>Assignments Page</title>
 </head>
 <body>
-	<p>Coming Soon</p>
+	<p>
+		<a href="https://mysterious-island-48865.herokuapp.com/home.php">Week03- Shopping Cart</a>
+	</p>
 </body>
 </html>
